View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025027 | Open CASCADE | OCCT:Visualization | public | 2014-06-20 11:30 | 2014-11-11 12:52 |
Reporter | Assigned To | apn | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025027: Visualization - 2D layer viewport is updated incorrectly on resize | ||||
Description | After resizing viewer to irregular quadrangle and updating it (e.g. displaying object, highlighting object etc.) ColorScale changes it position and in case of flattened viewer exceed its bounds. The reason is misprint in Visual3d_ViewManager::Redraw() method anIter.Value()->Window()->Size (aWidth, aHeight); aWidthMax = Max (aWidthMax, aWidth); aHeightMax = Max (aHeightMax, aWidth); | ||||
Steps To Reproduce | - create colorscale - flatten the viewer (change aspect ratio) - create any object (e.g. box) pload MODELING VISUALIZATION box b 1 2 3 vinit w=1024 h=512 vsetdispmode 1 vdisplay b vfit vcolorscale 10 20 100 16 2 0 0 vmoveto 512 250 Note that the problem does not appear on screenshot - only during interactive execution. | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug25027 | ||||
|
Dear bugmaster, please test patch in branch CR25027. Please move bug to Open CASCADE project. |
|
Dear BugMaster, Branch CR25027 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 994140336646ebb057d6fe776aaae5041b750315 Number of compiler warnings: occt component : Linux: 16 (16 on master) Windows: 0 (0 on master) MacOS: 200 (203 on master) products component : Linux: 11 (11 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR25027-master-occt/Debian60-64/bugs/vis/bug25027.html bugs vis(004) bug25027: OK Testing on Linux: Total MEMORY difference: 348472780 / 348636364 Total CPU difference: 50711.62000000006 / 51365.12000000003 Testing on Windows: Total MEMORY difference: 376292496 / 376872500 Total CPU difference: 37757.015625 / 38774.78125 There are no differences in images found by testdiff. |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-06-20 11:30 |
|
New Issue | |
2014-06-20 11:30 |
|
Assigned To | => anv |
2014-06-20 11:50 |
|
Assigned To | anv => kgv |
2014-06-20 11:54 | kgv | Status | new => assigned |
2014-06-20 11:54 | kgv | Product Version | 6.7.1 => |
2014-06-20 11:54 | kgv | Target Version | => 6.8.0 |
2014-06-20 11:54 | kgv | Summary | Problem with ColorScale positioning => Visualization - 2D layer viewport is updated incorrectly on resize |
2014-06-20 11:54 | kgv | Steps to Reproduce Updated | |
2014-06-20 12:02 | kgv | Note Added: 0029849 | |
2014-06-20 12:02 | kgv | Assigned To | kgv => bugmaster |
2014-06-20 12:02 | kgv | Status | assigned => resolved |
2014-06-20 12:02 | kgv | Status | resolved => reviewed |
2014-06-20 12:03 | kgv | Description Updated | |
2014-06-20 12:39 |
|
Assigned To | bugmaster => mkv |
2014-06-20 13:00 | kgv | Severity | minor => trivial |
2014-06-20 14:13 | kgv | Steps to Reproduce Updated | |
2014-06-20 14:13 | kgv | Steps to Reproduce Updated | |
2014-06-23 17:55 |
|
Note Added: 0029860 | |
2014-06-23 17:55 |
|
Test case number | => bugs vis(004) bug25027 |
2014-06-23 17:55 |
|
Assigned To | mkv => bugmaster |
2014-06-23 17:55 |
|
Status | reviewed => tested |
2014-06-26 12:43 | bugmaster | Project | Internal => Open CASCADE |
2014-06-27 16:27 | apn | Changeset attached | => occt master c1c1aefa |
2014-06-27 16:27 | apn | Assigned To | bugmaster => apn |
2014-06-27 16:27 | apn | Status | tested => verified |
2014-06-27 16:27 | apn | Resolution | open => fixed |
2014-11-11 12:46 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |