0025027: Visualization - 2D layer viewport is updated incorrectly on resize

Test case for issue CR25027